    * Add new status bar design (optional)
    * Add support for multiple printers
    * split tr069-remove-patches 
    * add additional image-infopage and .config in firmware image (by herman72pb)
    * remove ntfs-support
    * remove umts-support
    * add 3rd alarm-clock (for 7150  7112 7141 7170  3070_V3  3270 7240 7270 7270_V3)
    * freetzmount (by herman)

- New packages, libs, modules:
    * aiccu 20070115
    * apr 1.9.3
    * apr-util 1.9.3
    * cpmaccfg-cgi 1.0: Webinterface for cpmaccfg
    * digitemp 3.6.0
    * dosfstools 3.0.5
    * flex (libflex) 2.5.35
    * fortune 1.2
    * gocr 0.48
    * gw6 5.1
    * hplip 3.8.9
    * hp-utils 0.3.2
    * htop-0.8.3
    * iptraf 3.0.0
    * iputils s20071127
    * irssi 0.8.14
    * lftp 4.0.5
    * libfreetz 0.1
    * libgd 2.0.35
    * libsynce 0.10.0
    * lighttpd 1.4.25
    * mdev 0.6.2: First try to replace AVM's hotplug chain
      depends on 7170, 7240 and 7270.
    * ncftp-3.2.3
    * netpbm-10.35.69
    * ndas-1.1-22
    * nhipt iptables cgi 0.8.3a
    * nfs-utils 1.2.0
    * ngircd 15
    * nmap 4.68
    * noip 2.1.9
    * onlinechanged-cgi 0.1
    * owfs 2.7p7
    * pcre 8.00
    * phpxmail 1.5
    * polipo 1.0.4
    * ppp-cgi 0.6.9
    * radvd 1.5
    * rsync 3.0.6
    * ruby-fcgi 0.8.7
    * ser2net 2.5
    * slurm 0.3.3
    * spawn-fcgi 1.6.3
    * sqlite 3.6.21
    * subversion 1.6.6
    * synce-dccm 0.9.1
    * synce-serial 0.10.0
    * tcpproxy 2.0.0-beta15
    * transmission-cgi 0.0.2
    * unrar 3.9.7
    * vnstat 1.9
    * vnstat-cgi 0.6.9
    * vtun 3.0.2
    * xmail 1.26

- Updated tools and hooks:

- Updated patches:
    * add reiserfs to automountable filesystems
    * change nice names for USB devices (sdax > uStor0x, sdby > uStor1y, ...) 
    * Update usbstorage patches

- Updated packages and libs:
    * bash 3.2.50
    * bftpd 2.3
    * bip 0.8.4
    * bird 1.1.2
    * callmonitor 1.16
    * cryptsetup 1.0.6
    * curl 7.19.7
    * cyassl 1.0.3
    * davfs2 1.4.5