@@ -1699,6 +1699,15 @@ config FREETZ_ADD_ANNEX_A_FIRMWARE
 		uncompressed data size. But you can remove Annex B file if you
 		plan to use Annex A.
 
+config FREETZ_ADD_REGEXT_GUI
+	bool "Patch GUI to enable external SIP connections"
+	depends on \
+		((FREETZ_TYPE_FON_WLAN_7240 || FREETZ_TYPE_FON_WLAN_7270 || FREETZ_TYPE_FON_WLAN_7270_V3) && FREETZ_TYPE_LABOR)
+	default n
+	help
+		Patches the WebUI and add a checkbox to enable setting "reg_from_outside" in the voip.conf of LABOR firmwares. 
+
+
 endmenu
 
 menu "Package selection"
